--- a/Style.css
+++ b/Style.css
@@ -6,4 +6,4 @@
 @import url(card.css);
 @import url(camisas.css);
 @import url(iconos_de_rede_social.css);
-@import url(/Eletiva/Pagina-produtos/pe-de-pagina.css);
+@import url(pe-de-pagina.css);
