--- a/div_flex-produtos.css
+++ b/div_flex-produtos.css
@@ -2,10 +2,10 @@
 
 .container{
 
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    align-items: center;
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 40px !important;
+    align-items: center !important;
     padding-bottom: 40px;
 
 }
