--- a/Style-produto_fixo (1).css
+++ b/Style-produto_fixo (1).css
@@ -1,5 +1,5 @@
 @import url(header-produto_fixo.css);
-@import url(barra-de-busca_pagina-produtos.css);
+@import url(barra-de-busca.css);
 @import url(main_produto_fixo.css);
 @import url(iconos_de_rede_social.css);
 @import url(pe-de-pagina.css);
