--- a/iconos_de_rede_social.css
+++ b/iconos_de_rede_social.css
@@ -226,7 +226,11 @@
     
     }
     
-    
+    link-instagram{
+
+        position:fixed;
+        
+    }
     
     .iconos_redes_sociais li .icon{
     
