--- a/Style-produtos.css
+++ b/Style-produtos.css
@@ -3,5 +3,5 @@
 @import url(section-productos.css);
 @import url(div_flex-produtos.css);
 @import url(img-top-card.css);
-@import url(iconos-de-rede-social_pagina-produtos.css);
+@import url(iconos-de-rede-social.css);
 @import url(pe-de-pagina.css);
